Fix dates list spilling outside of app into html

--- a/src/Components/Schedule/Schedule.scss
+++ b/src/Components/Schedule/Schedule.scss
@@ -39,6 +39,7 @@
   }
   h2 {
     font-weight: bold;
+    margin-bottom: 5px;
   }
   color: $font-color;
   font-size: 1.75em;
@@ -46,8 +47,8 @@
   padding: 4%;
   display: flex;
   flex-direction: column;
+  line-height: 1.4;
   justify-content: space-evenly;
-  min-height: 40vh;
 }
 
 .calendar-wrapper {
